Added Categories view

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,14 +1,17 @@
-@{
+<!DOCTYPE html>
+<html lang="en">
 
-}
-
-<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 
 <body>
-    <h1>Welcome to home page</h1>
-    <br />
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim aliquam ex rem veniam dolorum ea, iusto
-        necessitatibus natus? Ab, suscipit?</p>
+    <h3>Home page</h3>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus pariatur quasi cum dolorum amet laboriosam
+        harum illo quam eligendi. Iusto.</p>
 </body>
 
 </html>
