--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 @section title {
-    <h3>Home page</h3>
+    <h3 class="my-4">Home page</h3>
+    <hr class="my-2">
 }
 
 <h1>This the home content</h1>
