--- a/Views/Categories/Add.cshtml
+++ b/Views/Categories/Add.cshtml
@@ -1,14 +1,17 @@
 @model AddCategoryViewModel;
 
 @section title {
-    <h3>Add category</h3>
+    <h3 class="my-4">Nueva categoria</h3>
     <hr class="my-2">
 }
+
 
 <div class="d-flex flex-column col-10 mx-auto">
     <form method="post" asp-controller="categories" asp-action="add">
 
         <div class="text-danger m-2 px-2" asp-validation-summary="All"></div>
+
+
 
         <div class="my-4">
             <div class="row mb-1 col-12 mx-auto">
@@ -16,10 +19,10 @@
                     <label asp-for="Category.Name" class="col-form-label text-end">Categoria</label>
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8">
-                    <input type="text" asp-for="Category.Name" class="form-control rounded-pill">
+                    <input type="text" asp-for="Category.Name" class="form-control">
                 </div>
             </div>
-            <div>
+            <div class="col-12 mx-2 row">
                 <span class="text-danger" asp-validation-for="Category.Name"></span>
             </div>
         </div>
@@ -27,34 +30,94 @@
         <div class="my-4">
             <div class="row mb-1 col-12 mx-auto">
                 <div class="col-lg-2  col-md-3 col-sm-4">
-                    <label asp-for="Category.Description" class="col-form-label">Subcategoria</label>
+                    <label asp-for="Category.Description" class="col-form-label">Descripcion</label>
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8">
-                    <input type="text" asp-for="Category.Description" class="form-control rounded-pill">
+                    <textarea asp-for="Category.Description" class="form-control" cols="4"></textarea>
                 </div>
             </div>
-            <div>
+            <div class="col-12 mx-2 row">
                 <span class="text-danger" asp-validation-for="Category.Description"></span>
             </div>
         </div>
 
         <div class="my-4">
-            <div class="row mb-1 form-check col-2 d-flex justify-content-end px-4 gap-2">
+            <div class="mb-1 form-check col-12 d-flex flex-row justify-content-end px-4 gap-2">
                 <input class="form-check-input" type="checkbox" asp-for="Category.IsActive" id="isActiveCheckbox">
                 <label class="form-check-label" for="isActiveCheckbox">Actualmente activo</label>
             </div>
         </div>
 
-        <div class="row mt-5 justify-content-between">
-            <div class="col-4 d-flex justify-content-center">
-                <input type="submit" class="btn btn-primary rounded-pill" value="Add" />
+
+
+        <div class="row mt-5 justify-content-between gap-2">
+            <div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
+                <input type="submit" class="btn btn-primary rounded-pill w-75" value="Crear" />
             </div>
 
-            <div class="col-4 d-flex justify-content-center">
-                <a asp-controller="categories" asp-action="index" type="button" class="btn btn-danger rounded-pill">
+            <div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
+                <a asp-controller="categories" asp-action="index" type="button"
+                    class="btn btn-danger rounded-pill w-75">
                     Cancelar
                 </a>
             </div>
         </div>
+
     </form>
 </div>
+
+
+@* <div class="d-flex flex-column col-10 mx-auto">
+<form method="post" asp-controller="categories" asp-action="add">
+
+<div class="text-danger m-2 px-2" asp-validation-summary="All"></div>
+
+<div class="my-4">
+<div class="row mb-1 col-12 mx-auto">
+<div class="col-lg-2 col-md-3 col-sm-4">
+<label asp-for="Category.Name" class="col-form-label text-end">Categoria</label>
+</div>
+<div class="col-lg-10 col-md-9 col-sm-8">
+<input type="text" asp-for="Category.Name" class="form-control rounded-pill px-3">
+</div>
+</div>
+<div>
+<span class="text-danger" asp-validation-for="Category.Name"></span>
+</div>
+</div>
+
+<div class="my-4">
+<div class="row mb-1 col-12 mx-auto">
+<div class="col-lg-2 col-md-3 col-sm-4">
+<label asp-for="Category.Description" class="col-form-label">Subcategoria</label>
+</div>
+<div class="col-lg-10 col-md-9 col-sm-8">
+<input type="text" asp-for="Category.Description" class="form-control rounded-pill px-3">
+</div>
+</div>
+<div>
+<span class="text-danger" asp-validation-for="Category.Description"></span>
+</div>
+</div>
+
+<div class="my-4">
+<div class="mb-1 form-check col-12 d-flex flex-row justify-content-end px-4 gap-2">
+<input class="form-check-input" type="checkbox" asp-for="Category.IsActive" id="isActiveCheckbox">
+<label class="form-check-label" for="isActiveCheckbox">Actualmente activo</label>
+</div>
+</div>
+
+<div class="row mt-5 justify-content-between gap-2">
+<div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
+<input type="submit" class="btn btn-primary rounded-pill w-75" value="Add" />
+</div>
+
+<div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
+<a asp-controller="categories" asp-action="index" type="button"
+class="btn btn-danger rounded-pill w-75">
+Cancelar
+</a>
+</div>
+</div>
+</form>
+</div> *@
