--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -1,24 +1,28 @@
 @model Category
 
 @section title {
-    <h3>Edicion de categoria</h3>
-    <hr>
+    <h3 class="my-4">Edicion de categoria</h3>
+    <hr class="my-2">
 }
 
-<div class="d-flex flex-column justify-items-center">
-    <form method="post" asp-controller="categories" asp-action="add">
 
-        <div class="text-danger" asp-validation-summary="All"></div>
+<div class="d-flex flex-column col-10 mx-auto">
+    <form method="post" asp-controller="categories" asp-action="edit">
+
+        <div class="text-danger m-2 px-2" asp-validation-summary="All"></div>
 
         <input type="hidden" asp-for="Id">
 
-        <div class="my-3">
-            <div class="row mb-1">
-                <div class="col-lg-2 col-sm-4">
+
+
+
+        <div class="my-4">
+            <div class="row mb-1 col-12 mx-auto">
+                <div class="col-lg-2 col-md-3 col-sm-4">
                     <label asp-for="Name" class="col-form-label">Categoria</label>
                 </div>
-                <div class="col-lg-6 col-sm-8">
-                    <input type="text" asp-for="Name" class="form-control">
+                <div class="col-lg-10 col-md-9 col-sm-8">
+                    <input type="text" asp-for="Name" value=@Model.Name class="form-control">
                 </div>
             </div>
             <div>
@@ -26,13 +30,13 @@
             </div>
         </div>
 
-        <div class="my-3">
-            <div class="row mb-1">
-                <div class="col-lg-2 col-sm-4">
-                    <label asp-for="Description" class="col-form-label">Subcategoria</label>
+        <div class="my-4">
+            <div class="row mb-1 col-12 mx-auto">
+                <div class="col-lg-2 col-md-3 col-sm-4">
+                    <label asp-for="Description" class="col-form-label">Descripcion</label>
                 </div>
-                <div class="col-lg-6 col-sm-8">
-                    <input type="text" asp-for="Description" class="form-control">
+                <div class="col-lg-10 col-md-9 col-sm-8">
+                    <textarea cols="4" asp-for="Description" value=@Model.Description class="form-control"></textarea>
                 </div>
             </div>
             <div>
@@ -40,26 +44,88 @@
             </div>
         </div>
 
-        <div class="my-3">
-            <div class="row mb-1 form-check align-items-center">
-                <input class="form-check-input" type="checkbox" asp-for="IsActive" id="isActiveCheckbox">
+        <div class="my-4">
+            <div class="mb-1 form-check col-12 d-flex flex-row justify-content-end px-4 gap-2">
+                <input class="form-check-input" type="checkbox" value=@Model.IsActive asp-for="IsActive"
+                    id="isActiveCheckbox">
                 <label class="form-check-label" for="isActiveCheckbox">Actualmente activo</label>
             </div>
         </div>
 
-        <div class="row my-3">
-            <div class="col-4">
-                <input type="submit" class="btn btn-primary" value="Save" />
+
+
+
+        <div class="row mt-5 justify-content-between gap-2">
+            <div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
+                <input type="submit" class="btn btn-primary rounded-pill w-75" value="Guardar" />
             </div>
 
-            <div class="col-4">
-            </div>
-
-            <div class="col-4 justify-content-end">
-                <a asp-controller="categories" asp-action="index" type="button" class="btn btn-danger">
+            <div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
+                <a asp-controller="categories" asp-action="index" type="button"
+                    class="btn btn-danger rounded-pill w-75">
                     Cancelar
                 </a>
             </div>
         </div>
     </form>
 </div>
+
+
+@* <div class="d-flex flex-column justify-items-center">
+<form method="post" asp-controller="categories" asp-action="add">
+
+<div class="text-danger" asp-validation-summary="All"></div>
+
+<input type="hidden" asp-for="Id">
+
+<div class="my-3">
+<div class="row mb-1">
+<div class="col-lg-2 col-sm-4">
+<label asp-for="Name" class="col-form-label">Categoria</label>
+</div>
+<div class="col-lg-6 col-sm-8">
+<input type="text" asp-for="Name" class="form-control">
+</div>
+</div>
+<div>
+<span class="text-danger" asp-validation-for="Name"></span>
+</div>
+</div>
+
+<div class="my-3">
+<div class="row mb-1">
+<div class="col-lg-2 col-sm-4">
+<label asp-for="Description" class="col-form-label">Subcategoria</label>
+</div>
+<div class="col-lg-6 col-sm-8">
+<input type="text" asp-for="Description" class="form-control">
+</div>
+</div>
+<div>
+<span class="text-danger" asp-validation-for="Description"></span>
+</div>
+</div>
+
+<div class="my-3">
+<div class="row mb-1 form-check align-items-center">
+<input class="form-check-input" type="checkbox" asp-for="IsActive" id="isActiveCheckbox">
+<label class="form-check-label" for="isActiveCheckbox">Actualmente activo</label>
+</div>
+</div>
+
+<div class="row my-3">
+<div class="col-4">
+<input type="submit" class="btn btn-primary" value="Save" />
+</div>
+
+<div class="col-4">
+</div>
+
+<div class="col-4 justify-content-end">
+<a asp-controller="categories" asp-action="index" type="button" class="btn btn-danger">
+Cancelar
+</a>
+</div>
+</div>
+</form>
+</div> *@
