--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -131,7 +131,7 @@
         </div>
 
 
-        <div class="px-0" style="display: flex; flex-direction: column; width: 100%">
+        <div class="px-0 bg-light" style="display: flex; flex-direction: column; width: 100%">
 
             <div class="d-flex justify-content-between align-items-center p-2 w-100" style="background-color: #00A79D;">
 
