--- a/Views/Categories/Add.cshtml
+++ b/Views/Categories/Add.cshtml
@@ -51,14 +51,21 @@
 
 
         <div class="row mt-5 justify-content-between gap-2">
-            <div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
-                <input type="submit" class="btn btn-primary rounded-pill w-75" value="Crear" />
+            <div class="col d-flex justify-content-center">
+                @* <div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center"> *@
+
+                @* <input type="submit" class="btn btn-primary rounded-pill w-75" value="Crear" /> *@
+                <button type="submit" class="btn btn-primary rounded-pill" style="width: 120px;">
+                    <i class="bi bi-plus-circle"></i>
+                    <span style="margin-left: 8px; fs-6">Crear</span>
+                </button>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
-                <a asp-controller="categories" asp-action="index" type="button"
-                    class="btn btn-danger rounded-pill w-75">
-                    Cancelar
+            <div class="col d-flex justify-content-center">
+                <a asp-controller="categories" asp-action="index" type="button" class="btn btn-danger rounded-pill"
+                    style="width: 120px;">
+                    <i class="bi bi-x-circle"></i>
+                    <span class="fs-6" style="margin-left: 8px;">Cancelar</span>
                 </a>
             </div>
         </div>
