--- a/Views/Categories/Details.cshtml
+++ b/Views/Categories/Details.cshtml
@@ -27,8 +27,20 @@
     </div>
 </div>
 
-<div class="d-flex mx-auto mt-5 col-lg-3 col-md-4 col-sm-8 justify-items-center">
-    <a class="btn btn-info rounded-pill" asp-controller="categories" asp-action="edit" asp-route-id="@Model.Id">
-        Editar
-    </a>
+<div class="row mt-5 justify-content-between gap-2">
+    <div class="col d-flex justify-content-center">
+        <a class="btn btn-info rounded-pill" asp-controller="categories" asp-action="edit" asp-route-id="@Model.Id"
+            style="100px">
+            <i class="bi bi-pencil"></i>
+            <span class="fs-6" style="margin-left: 8px;">Editar</span>
+        </a>
+    </div>
+
+    <div class="col d-flex justify-content-center">
+        <a asp-controller="categories" asp-action="index" type="button" class="btn btn-danger rounded-pill"
+            style="width: 100px;">
+            <i class="bi bi-arrow-left-circle"></i>
+            <span class="fs-6" style="margin-left: 8px;">Volver</span>
+        </a>
+    </div>
 </div>
