--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -46,8 +46,7 @@
 
         <div class="my-4">
             <div class="mb-1 form-check col-12 d-flex flex-row justify-content-end px-4 gap-2">
-                <input class="form-check-input" type="checkbox" value=@Model.IsActive asp-for="IsActive"
-                    id="isActiveCheckbox">
+                <input class="form-check-input" type="checkbox" asp-for="IsActive" id="isActiveCheckbox">
                 <label class="form-check-label" for="isActiveCheckbox">Actualmente activo</label>
             </div>
         </div>
@@ -56,14 +55,18 @@
 
 
         <div class="row mt-5 justify-content-between gap-2">
-            <div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
-                <input type="submit" class="btn btn-primary rounded-pill w-75" value="Guardar" />
+            <div class="col d-flex justify-content-center">
+                <button type="submit" class="btn btn-primary rounded-pill" style="width: 120px;">
+                    <i class="bi bi-check-circle"></i>
+                    <span style="margin-left: 8px; fs-6">Guardar</span>
+                </button>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-sm-5 d-flex justify-content-center">
-                <a asp-controller="categories" asp-action="index" type="button"
-                    class="btn btn-danger rounded-pill w-75">
-                    Cancelar
+            <div class="col d-flex justify-content-center">
+                <a asp-controller="categories" asp-action="index" type="button" class="btn btn-danger rounded-pill"
+                    style="width: 120px;">
+                    <i class="bi bi-x-circle"></i>
+                    <span style="margin-left: 8px; fs-6">Cancelar</span>
                 </a>
             </div>
         </div>
