--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                     </li>
 
                     <li class="nav-item m-1">
-                        <a href="#" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
+                        <a href="/brands" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
                             style="text-decoration: none;">
                             <i class="bi bi-tags fs-5"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
