--- a/Views/Brands/Index.cshtml
+++ b/Views/Brands/Index.cshtml
@@ -32,7 +32,7 @@
                     </td>
                     <td class="justify-content-center">
                         <a class="btn btn-danger rounded-pill" asp-controller="brands" asp-action="delete"
-                            asp-route-id="@brand.Id" style="width: 100px;">
+                            asp-route-id="@brand.Id" style="width: 100px;" onclick="return confirmDelete()">
                             <i class="bi bi-trash"></i>
                             <span style="margin-left: 8px; fs-6">Borrar</span>
                         </a>
@@ -51,3 +51,12 @@
         <span style="margin-left: 8px; fs-6">Nueva marca</span>
     </a>
 </div>
+
+@section Scripts
+{
+    <script>
+        const confirmDelete = () => {
+            return confirm("Esta marca sera removida ¿Desea continuar?");
+        }
+    </script>
+}
