--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,6 +45,16 @@
                     </li>
 
                     <li class="nav-item m-1">
+                        <a href="/brands" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
+                            style="text-decoration: none;">
+                            <i class="bi bi-tags fs-5"></i>
+                            <div class="span" style="margin-left: 12px; display: none;">
+                                <span class="fs-5">Brands</span>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="nav-item m-1">
                         <a href="/categories" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
                             style="text-decoration: none;">
                             <i class="bi bi-inboxes-fill fs-5"></i>
@@ -55,11 +65,11 @@
                     </li>
 
                     <li class="nav-item m-1">
-                        <a href="/brands" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
+                        <a href="/subcategories" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
                             style="text-decoration: none;">
-                            <i class="bi bi-tags fs-5"></i>
+                            <i class="bi bi-prescription2 fs-5"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">Brands</span>
+                                <span class="fs-5">Subcategories</span>
                             </div>
                         </a>
                     </li>
