--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -5,73 +5,74 @@
     <hr class="my-2">
 }
 
+<partial name="_Category" model="@Model" />
 
-<div class="d-flex flex-column col-10 mx-auto">
-    <form method="post" asp-controller="categories" asp-action="edit">
+@* <div class="d-flex flex-column col-10 mx-auto">
+<form method="post" asp-controller="categories" asp-action="edit">
 
-        <div class="text-danger m-2 px-2" asp-validation-summary="All"></div>
+<div class="text-danger m-2 px-2" asp-validation-summary="All"></div>
 
-        <input type="hidden" asp-for="Id">
-
-
-
-
-        <div class="my-4">
-            <div class="row mb-1 col-12 mx-auto">
-                <div class="col-lg-2 col-md-3 col-sm-4">
-                    <label asp-for="Name" class="col-form-label">Categoria</label>
-                </div>
-                <div class="col-lg-10 col-md-9 col-sm-8">
-                    <input type="text" asp-for="Name" value=@Model.Name class="form-control">
-                </div>
-            </div>
-            <div>
-                <span class="text-danger" asp-validation-for="Name"></span>
-            </div>
-        </div>
-
-        <div class="my-4">
-            <div class="row mb-1 col-12 mx-auto">
-                <div class="col-lg-2 col-md-3 col-sm-4">
-                    <label asp-for="Description" class="col-form-label">Descripcion</label>
-                </div>
-                <div class="col-lg-10 col-md-9 col-sm-8">
-                    <textarea cols="4" asp-for="Description" value=@Model.Description class="form-control"></textarea>
-                </div>
-            </div>
-            <div>
-                <span class="text-danger" asp-validation-for="Description"></span>
-            </div>
-        </div>
-
-        <div class="my-4">
-            <div class="mb-1 form-check col-12 d-flex flex-row justify-content-end px-4 gap-2">
-                <input class="form-check-input" type="checkbox" asp-for="IsActive" id="isActiveCheckbox">
-                <label class="form-check-label" for="isActiveCheckbox">Actualmente activo</label>
-            </div>
-        </div>
+<input type="hidden" asp-for="Id">
 
 
 
 
-        <div class="row mt-5 justify-content-between gap-2">
-            <div class="col d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary rounded-pill" style="width: 120px;">
-                    <i class="bi bi-check-circle"></i>
-                    <span style="margin-left: 8px; fs-6">Guardar</span>
-                </button>
-            </div>
-
-            <div class="col d-flex justify-content-center">
-                <a asp-controller="categories" asp-action="index" type="button" class="btn btn-danger rounded-pill"
-                    style="width: 120px;">
-                    <i class="bi bi-x-circle"></i>
-                    <span style="margin-left: 8px; fs-6">Cancelar</span>
-                </a>
-            </div>
-        </div>
-    </form>
+<div class="my-4">
+<div class="row mb-1 col-12 mx-auto">
+<div class="col-lg-2 col-md-3 col-sm-4">
+<label asp-for="Name" class="col-form-label">Categoria</label>
 </div>
+<div class="col-lg-10 col-md-9 col-sm-8">
+<input type="text" asp-for="Name" value=@Model.Name class="form-control">
+</div>
+</div>
+<div>
+<span class="text-danger" asp-validation-for="Name"></span>
+</div>
+</div>
+
+<div class="my-4">
+<div class="row mb-1 col-12 mx-auto">
+<div class="col-lg-2 col-md-3 col-sm-4">
+<label asp-for="Description" class="col-form-label">Descripcion</label>
+</div>
+<div class="col-lg-10 col-md-9 col-sm-8">
+<textarea cols="4" asp-for="Description" value=@Model.Description class="form-control"></textarea>
+</div>
+</div>
+<div>
+<span class="text-danger" asp-validation-for="Description"></span>
+</div>
+</div>
+
+<div class="my-4">
+<div class="mb-1 form-check col-12 d-flex flex-row justify-content-end px-4 gap-2">
+<input class="form-check-input" type="checkbox" asp-for="IsActive" id="isActiveCheckbox">
+<label class="form-check-label" for="isActiveCheckbox">Actualmente activo</label>
+</div>
+</div>
+
+
+
+
+<div class="row mt-5 justify-content-between gap-2">
+<div class="col d-flex justify-content-center">
+<button type="submit" class="btn btn-primary rounded-pill" style="width: 120px;">
+<i class="bi bi-check-circle"></i>
+<span style="margin-left: 8px; fs-6">Guardar</span>
+</button>
+</div>
+
+<div class="col d-flex justify-content-center">
+<a asp-controller="categories" asp-action="index" type="button" class="btn btn-danger rounded-pill"
+style="width: 120px;">
+<i class="bi bi-x-circle"></i>
+<span style="margin-left: 8px; fs-6">Cancelar</span>
+</a>
+</div>
+</div>
+</form>
+</div> *@
 
 
 @* <div class="d-flex flex-column justify-items-center">
