--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -42,7 +42,7 @@
                         </a>
                     </td>
                     <td class="justify-content-center">
-                        <a class="btn btn-danger rounded-pill" asp-controller="categories" asp-action="products"
+                        <a class="btn btn-danger rounded-pill" asp-controller="products" asp-action="delete"
                             asp-route-id="@product.Id" style="width: 100px;" onclick="return confirmDelete()">
                             <i class="bi bi-trash"></i>
                             <span style="margin-left: 8px; fs-6">Borrar</span>
