--- a/Views/Subcategories/Index.cshtml
+++ b/Views/Subcategories/Index.cshtml
@@ -1,7 +1,8 @@
 @model IEnumerable<Subcategory>
 
 @section title {
-
+    <h3 class="my-4">Subcategorias</h3>
+    <hr class="my-2">
 }
 
 @if (Model != null && Model.Count() > 0)
