--- a/Views/Products/_Product.cshtml
+++ b/Views/Products/_Product.cshtml
@@ -73,7 +73,7 @@
         <div class="my-4">
             <div class="row mb-1 col-12 mx-auto">
                 <div class="col-lg-2 col-md-3 col-sm-4">
-                    <label asp-for="Product.Name" class="col-form-label text-end">Nombre</label>
+                    <label asp-for="Product.Name" class="col-form-label text-end">Descripcion</label>
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8">
                     <textarea cols="4" asp-for="Product.Description" class="form-control"></textarea>
@@ -127,6 +127,29 @@
             </div>
             <div class="col-12 mx-2 row">
                 <span class="text-danger" asp-validation-for="Product.BrandId"></span>
+            </div>
+        </div>
+
+        <div class="my-4">
+            <div class="row mb-1 col-12 mx-auto">
+                <div class="col-lg-2 col-md-3 col-sm-4">
+                    <label asp-for="Product.TaxId" class="col-form-label text-end">Impuesto</label>
+                </div>
+                <div class="col-lg-10 col-md-9 col-sm-8">
+                    <select asp-for="Product.TaxId" class="form-control">
+                        <option value=""> - Seleccionar impuesto - </option>
+                        @if (Model.Brands != null)
+                        {
+                            @foreach (var tax in Model.Taxes)
+                            {
+                                <option value="@tax.Id">@tax.Name</option>
+                            }
+                        }
+                    </select>
+                </div>
+            </div>
+            <div class="col-12 mx-2 row">
+                <span class="text-danger" asp-validation-for="Product.TaxId"></span>
             </div>
         </div>
 
