--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -75,42 +75,29 @@
                     </li>
 
                     <li class="nav-item m-1">
+                        <a href="/taxes" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
+                            style="text-decoration: none;">
+                            <i class="bi bi-percent"></i>
+                            <div class="span" style="margin-left: 12px; display: none;">
+                                <span class="fs-5">Impuestos</span>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="nav-item m-1">
                         <a href="/products" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
                             style="text-decoration: none;">
                             <i class="bi bi-capsule-pill fs-5"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">Products</span>
+                                <span class="fs-5">Productos</span>
                             </div>
                         </a>
-
-                        @* <ul class="collapse flex-column inactive" id="productsmenu" data-bs-parent="#productsmenu">
-                        <li class="m-1">
-                        <a href="#" class="nav-link" style="text-decoration: none;">
-                        <button class="btn btn-outline-light d-flex align-items-center border-0 w-100">
-                        <i class="bi bi-capsule-pill fs-6"></i>
-                        <div class="span" style="margin-left: 12px;">
-                        <span class="fs-6">List of products</span>
-                        </div>
-                        </button>
-                        </a>
-                        </li>
-                        <li class="m-1">
-                        <a href="#" class="nav-link" style="text-decoration: none;">
-                        <button class="btn btn-outline-light d-flex align-items-center border-0 w-100">
-                        <i class="bi bi-capsule-pill fs-6"></i>
-                        <div class="span" style="margin-left: 12px;">
-                        <span class="fs-6">List of products</span>
-                        </div>
-                        </button>
-                        </a>
-                        </li>
-                        </ul> *@
                     </li>
 
                     <li class="nav-item m-1">
                         <a href="/sales" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
                             style="text-decoration: none;">
-                            <i class="bi bi-cash-coin"></i>
+                            <i class="bi bi-coin"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
                                 <span class="fs-5">Sell</span>
                             </div>
